- Fixed Bug #38698 for some keys cdbmake creates corrupted db and cdb can't read valid db